Mobile markup for header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="Недорогой местный эвакуатор: Сергиев Посад, Софрино, Хотьково, Пересвет, Краснозаводск и Ярославское шоссе.">
 	<meta name="keywords" content="эвакуатор, местный, частный, недорого, дешево, сергиев, посад, пересвет, хотьково, софрино, краснозаводск, ярославское, шоссе, 8 (925) 410-10-45">
 	<meta name="author" content="">
+	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/screen.css" media="screen, projection">
 	<link rel="shortcut icon" href="favicon.ico">
 	<script src="js/modernizr-2.6.2.custom.min.js"></script>
@@ -30,8 +31,16 @@
 			</div><!--
 			--><div class="logoTop__phone">
 				<span class="number"><nobr>8 (925) 410-10-45</nobr></span>
-			</div><!--
-		--></div>
+			</div>
+			<div class="headerButtons">
+				<a class="headerButtons__button headerButtons__button--call" href="#">
+					Позвонить
+				</a>
+				<a class="headerButtons__button  headerButtons__button--whatsapp" href="#">
+					WhatsApp
+				</a>
+			</div>
+		</div>
 		<div class="specifics">
 			<ul class="spec__list pointed big">
 				<li><span>Быстро</span></li>
