--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 				<span class="number"><nobr>8 (925) 410-10-45</nobr></span>
 			</div>
 			<div class="headerButtons">
-				<a class="headerButtons__button headerButtons__button--call" href="#">
+				<a class="headerButtons__button headerButtons__button--call" href="tel:+79254101045">
 					Позвонить
 				</a>
-				<a class="headerButtons__button  headerButtons__button--whatsapp" href="#">
+				<a class="headerButtons__button  headerButtons__button--whatsapp" href="https://api.whatsapp.com/send?phone=79263744591">
 					WhatsApp
 				</a>
 			</div>
@@ -149,32 +149,34 @@
 				<div class="block__content">
 					<p class="bigSize">В пределах г.Сергев Посад - от 2000 руб!</p>
 					<p>В зависимости от удаленности от города, стоимость рассчитывается следующим образом:</p>
-					<table class="priceTbl">
-						<tbody>
-							<tr>
-								<td class="title">Удаленность (км)</td>
-								<td>20-30</td>
-								<td>31-40</td>
-								<td>41-50</td>
-								<td>51-60</td>
-								<td>61-70</td>
-								<td>71-80</td>
-								<td>81-90</td>
-								<td>91-100</td>
-							</tr>
-							<tr>
-								<td class="title">Стоимость (руб)</td>
-								<td>3&nbsp;000</td>
-								<td>4&nbsp;000</td>
-								<td>4&nbsp;500</td>
-								<td>5&nbsp;000</td>
-								<td>5&nbsp;500</td>
-								<td>6&nbsp;000</td>
-								<td>6&nbsp;500</td>
-								<td>7&nbsp;000</td>
-							</tr>
-						</tbody>
-					</table>
+					<div class="overflow-table">
+						<table class="priceTbl">
+							<tbody>
+								<tr>
+									<td class="title">Удаленность (км)</td>
+									<td>20-30</td>
+									<td>31-40</td>
+									<td>41-50</td>
+									<td>51-60</td>
+									<td>61-70</td>
+									<td>71-80</td>
+									<td>81-90</td>
+									<td>91-100</td>
+								</tr>
+								<tr>
+									<td class="title">Стоимость (руб)</td>
+									<td>3&nbsp;000</td>
+									<td>4&nbsp;000</td>
+									<td>4&nbsp;500</td>
+									<td>5&nbsp;000</td>
+									<td>5&nbsp;500</td>
+									<td>6&nbsp;000</td>
+									<td>6&nbsp;500</td>
+									<td>7&nbsp;000</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
 				</div>
 			</div>
 		</div>
