Update table and link

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <!--[if lte IE 7]><html lang="en" class="no-js ie9- ie8- ie7-"><![endif]-->
 <!--[if IE 8]><html lang="en" class="no-js ie9- ie8-"><![endif]-->
 <!--[if IE 9]><html lang="en" class="no-js ie9-"><![endif]-->
-<!--[if !(IE)]><!--><html lang="ru" class="no-js"><!--<![endif]-->
+<!--[if !(IE)]><!-->
+<html lang="ru" class="no-js">
+<!--<![endif]-->
+
 <head>
 	<meta charset="utf-8">
-	<title>Местный эвакуатор в&nbsp;Сергиевом Посаде <nobr>8 (925) 410-10-45</nobr></title>
-	<meta name="description" content="Недорогой местный эвакуатор: Сергиев Посад, Софрино, Хотьково, Пересвет, Краснозаводск и Ярославское шоссе.">
-	<meta name="keywords" content="эвакуатор, местный, частный, недорого, дешево, сергиев, посад, пересвет, хотьково, софрино, краснозаводск, ярославское, шоссе, 8 (925) 410-10-45">
+	<title>Местный эвакуатор в&nbsp;Сергиевом Посаде <nobr>8 (925) 410-10-45</nobr>
+	</title>
+	<meta name="description"
+		content="Недорогой местный эвакуатор: Сергиев Посад, Софрино, Хотьково, Пересвет, Краснозаводск и Ярославское шоссе.">
+	<meta name="keywords"
+		content="эвакуатор, местный, частный, недорого, дешево, сергиев, посад, пересвет, хотьково, софрино, краснозаводск, ярославское, шоссе, 8 (925) 410-10-45">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/screen.css" media="screen, projection">
@@ -16,208 +22,275 @@
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<!--<script src="js/site.js"></script>-->
 </head>
+
 <body id="top">
-<div class="pageWrapper">
+	<div class="pageWrapper">
 
 
-<!-- *********************** Верх *********************** -->
+		<!-- *********************** Верх *********************** -->
 
-<header class="pageHeader" role="banner">
-	<div class="contentWrapper">
-		<div class="logoTop"><!--
-			--><div class="logoTop__lnk">
-				<img class="logoTop__img" src="img/logo.png" alt="Сергиево-Посадская служба эвакуации" width="62" height="47">
-				<h1 class="logoTop__name">Сергиево-Посадская служба эвакуации</h1>
-			</div><!--
-			--><div class="logoTop__phone">
-				<span class="number"><nobr>8 (925) 410-10-45</nobr></span>
-			</div>
-			<div class="headerButtons">
-				<a class="headerButtons__button headerButtons__button--call" href="tel:+79254101045">
-					Позвонить
-				</a>
-				<a class="headerButtons__button  headerButtons__button--whatsapp" href="https://api.whatsapp.com/send?phone=79263744591">
-					WhatsApp
-				</a>
-			</div>
-		</div>
-		<div class="specifics">
-			<ul class="spec__list pointed big">
-				<li><span>Быстро</span></li>
-				<li><span>Профессионально</span></li>
-				<li><span>Дёшево</span></li>
-			</ul>
-		</div>
-	</div>
-</header>
-
-<!-- *********************** Середина *********************** -->
-
-<div class="pageContent">
-	<div class="main" role="main">
-		<div class="block zone">
+		<header class="pageHeader" role="banner">
 			<div class="contentWrapper">
-				<h2 class="block__title">География наших услуг</h2>
-				<div class="zoneCols">
-					<ul class="zoneCols__list">
-						<li class="zoneCols__item icoPos_lft icoSize_36 i-marker">Сергиев Посад</li>
-						<li class="zoneCols__item icoPos_lft icoSize_36 i-marker">Пересвет</li>
-						<li class="zoneCols__item icoPos_lft icoSize_36 i-marker">Краснозаводск</li>
-					</ul>
-					<ul class="zoneCols__list">
-						<li class="zoneCols__item icoPos_lft icoSize_36 i-marker">Ярославское шоссе</li>
-						<li class="zoneCols__item icoPos_lft icoSize_36 i-marker">Хотьково</li>
-						<li class="zoneCols__item icoPos_lft icoSize_36 i-marker">Софрино</li>
+				<div class="logoTop">
+					<!--
+			-->
+					<div class="logoTop__lnk">
+						<img class="logoTop__img" src="img/logo.png" alt="Сергиево-Посадская служба эвакуации"
+							width="62" height="47">
+						<h1 class="logoTop__name">Сергиево-Посадская служба эвакуации</h1>
+					</div>
+					<!--
+			-->
+					<div class="logoTop__phone">
+						<span class="number"><a href="tel:+79254101045">8 (925) 410-10-45</a></span>
+					</div>
+					<div class="headerButtons">
+						<a class="headerButtons__button headerButtons__button--call" href="tel:+79254101045">
+							Позвонить
+						</a>
+						<a class="headerButtons__button  headerButtons__button--whatsapp"
+							href="https://api.whatsapp.com/send?phone=79263744591">
+							WhatsApp
+						</a>
+					</div>
+				</div>
+				<div class="specifics">
+					<ul class="spec__list pointed big">
+						<li><span>Быстро</span></li>
+						<li><span>Профессионально</span></li>
+						<li><span>Дёшево</span></li>
 					</ul>
 				</div>
 			</div>
-		</div>
+		</header>
 
-		<div class="block advantage">
-			<div class="contentWrapper">
-				<h2 class="block__title">Наши преимущества</h2>
-				<div class="blockListShell">
-					<ul class="blockList horizontal">
-						<li class="blockList__item icoPos_top icoSize_128 i-clock">
-							<h3 class="blockList__itemTitle">Быстрый выезд</h3>
-							<div class="blockList__itemContent">Выезжаем настолько быстро, что вы не успеете и понять, что мы уже на
-								месте и грузим вас</div>
-						</li>
-						<li class="blockList__item icoPos_top icoSize_128 i-driver">
-							<h3 class="blockList__itemTitle">Местные водители</h3>
-							<div class="blockList__itemContent">Выезжаем настолько быстро, что вы не успеете и понять, что мы уже на
-								месте и грузим вас</div>
-						</li>
-						<li class="blockList__item icoPos_top icoSize_128 i-fingerUp">
-							<h3 class="blockList__itemTitle">Опыт работы более 8 лет</h3>
-							<div class="blockList__itemContent">Выезжаем настолько быстро, что вы не успеете и понять, что мы уже на
-								месте и грузим вас</div>
-						</li>
-						<li class="blockList__item icoPos_top icoSize_128 i-moneyBag">
-							<h3 class="blockList__itemTitle">Доступные цены</h3>
-							<div class="blockList__itemContent">Выезжаем настолько быстро, что вы не успеете и понять, что мы уже на
-								месте и грузим вас</div>
-						</li>
-					</ul>
+		<!-- *********************** Середина *********************** -->
+
+		<div class="pageContent">
+			<div class="main" role="main">
+				<div class="block zone">
+					<div class="contentWrapper">
+						<h2 class="block__title">География наших услуг</h2>
+						<div class="zoneCols">
+							<ul class="zoneCols__list">
+								<li class="zoneCols__item icoPos_lft icoSize_36 i-marker">Сергиев Посад</li>
+								<li class="zoneCols__item icoPos_lft icoSize_36 i-marker">Пересвет</li>
+								<li class="zoneCols__item icoPos_lft icoSize_36 i-marker">Краснозаводск</li>
+							</ul>
+							<ul class="zoneCols__list">
+								<li class="zoneCols__item icoPos_lft icoSize_36 i-marker">Ярославское шоссе</li>
+								<li class="zoneCols__item icoPos_lft icoSize_36 i-marker">Хотьково</li>
+								<li class="zoneCols__item icoPos_lft icoSize_36 i-marker">Софрино</li>
+							</ul>
+						</div>
+					</div>
 				</div>
-			</div>
-		</div>
 
-		<div class="block services">
-			<div class="contentWrapper">
-				<h2 class="block__title stripe">Услуги эвакуатора</h2>
-				<div class="serviceShell">
-					<ul class="blockList vertical">
-						<li class="blockList__item icoPos_lft icoSize_36 i-exclamarkBig">
-							<h3 class="blockList__itemTitle">Эвакуация автомобиля с поломкой</h3>
-							<div class="blockList__itemContent">Мы перевозим автомобили весом до 4-х тонн (легковые, внедорожники,
-								минивэны и т.п.), подбирая эвакуатор под тип транспортного средства,
-								а также учитывая характер повреждений, если таковые имеются.</div>
-						</li>
-						<li class="blockList__item icoPos_lft icoSize_36 i-exclamarkBig">
-							<h3 class="blockList__itemTitle">Эвакуация брошенных автомобилей</h3>
-							<div class="blockList__itemContent">Мы перевозим автомобили весом до 4-х тонн (легковые, внедорожники,
-								минивэны и т.п.), подбирая эвакуатор под тип транспортного средства,
-								а также учитывая характер повреждений, если таковые имеются.</div>
-						</li>
-						<li class="blockList__item icoPos_lft icoSize_36 i-exclamarkBig">
-							<h3 class="blockList__itemTitle">Эвакуация из кювета и на бездорожье</h3>
-							<div class="blockList__itemContent">Мы перевозим автомобили весом до 4-х тонн (легковые, внедорожники,
-								минивэны и т.п.), подбирая эвакуатор под тип транспортного средства,
-								а также учитывая характер повреждений, если таковые имеются.</div>
-						</li>
-						<li class="blockList__item icoPos_lft icoSize_36 i-exclamarkBig">
-							<h3 class="blockList__itemTitle">Транспортировка спецтехники</h3>
-							<div class="blockList__itemContent">Мы перевозим автомобили весом до 4-х тонн (легковые, внедорожники,
-								минивэны и т.п.), подбирая эвакуатор под тип транспортного средства,
-								а также учитывая характер повреждений, если таковые имеются.</div>
-						</li>
-						<li class="blockList__item icoPos_lft icoSize_36 i-exclamarkBig">
-							<h3 class="blockList__itemTitle">Перевозка ретроавтомобилей и спорткаров</h3>
-							<div class="blockList__itemContent">Мы перевозим автомобили весом до 4-х тонн (легковые, внедорожники,
-								минивэны и т.п.), подбирая эвакуатор под тип транспортного средства,
-								а также учитывая характер повреждений, если таковые имеются.</div>
-						</li>
-					</ul>
+				<div class="block advantage">
+					<div class="contentWrapper">
+						<h2 class="block__title">Наши преимущества</h2>
+						<div class="blockListShell">
+							<ul class="blockList horizontal">
+								<li class="blockList__item icoPos_top icoSize_128 i-clock">
+									<h3 class="blockList__itemTitle">Быстрый выезд</h3>
+									<div class="blockList__itemContent">Выезжаем настолько быстро, что вы не успеете и
+										понять, что мы уже на
+										месте и грузим вас</div>
+								</li>
+								<li class="blockList__item icoPos_top icoSize_128 i-driver">
+									<h3 class="blockList__itemTitle">Местные водители</h3>
+									<div class="blockList__itemContent">Выезжаем настолько быстро, что вы не успеете и
+										понять, что мы уже на
+										месте и грузим вас</div>
+								</li>
+								<li class="blockList__item icoPos_top icoSize_128 i-fingerUp">
+									<h3 class="blockList__itemTitle">Опыт работы более 8 лет</h3>
+									<div class="blockList__itemContent">Выезжаем настолько быстро, что вы не успеете и
+										понять, что мы уже на
+										месте и грузим вас</div>
+								</li>
+								<li class="blockList__item icoPos_top icoSize_128 i-moneyBag">
+									<h3 class="blockList__itemTitle">Доступные цены</h3>
+									<div class="blockList__itemContent">Выезжаем настолько быстро, что вы не успеете и
+										понять, что мы уже на
+										месте и грузим вас</div>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>
-			</div>
-		</div>
 
-		<div class="block price">
-			<div class="contentWrapper">
-				<h2 class="block__title al_left">Стоимость эвакуации</h2>
-				<div class="block__content">
-					<p class="bigSize">В пределах г.Сергев Посад - от 2000 руб!</p>
-					<p>В зависимости от удаленности от города, стоимость рассчитывается следующим образом:</p>
-					<div class="overflow-table">
-						<table class="priceTbl">
-							<tbody>
-								<tr>
-									<td class="title">Удаленность (км)</td>
-									<td>20-30</td>
-									<td>31-40</td>
-									<td>41-50</td>
-									<td>51-60</td>
-									<td>61-70</td>
-									<td>71-80</td>
-									<td>81-90</td>
-									<td>91-100</td>
-								</tr>
-								<tr>
-									<td class="title">Стоимость (руб)</td>
-									<td>3&nbsp;000</td>
-									<td>4&nbsp;000</td>
-									<td>4&nbsp;500</td>
-									<td>5&nbsp;000</td>
-									<td>5&nbsp;500</td>
-									<td>6&nbsp;000</td>
-									<td>6&nbsp;500</td>
-									<td>7&nbsp;000</td>
-								</tr>
-							</tbody>
-						</table>
+				<div class="block services">
+					<div class="contentWrapper">
+						<h2 class="block__title stripe">Услуги эвакуатора</h2>
+						<div class="serviceShell">
+							<ul class="blockList vertical">
+								<li class="blockList__item icoPos_lft icoSize_36 i-exclamarkBig">
+									<h3 class="blockList__itemTitle">Эвакуация автомобиля с поломкой</h3>
+									<div class="blockList__itemContent">Мы перевозим автомобили весом до 4-х тонн
+										(легковые, внедорожники,
+										минивэны и т.п.), подбирая эвакуатор под тип транспортного средства,
+										а также учитывая характер повреждений, если таковые имеются.</div>
+								</li>
+								<li class="blockList__item icoPos_lft icoSize_36 i-exclamarkBig">
+									<h3 class="blockList__itemTitle">Эвакуация брошенных автомобилей</h3>
+									<div class="blockList__itemContent">Мы перевозим автомобили весом до 4-х тонн
+										(легковые, внедорожники,
+										минивэны и т.п.), подбирая эвакуатор под тип транспортного средства,
+										а также учитывая характер повреждений, если таковые имеются.</div>
+								</li>
+								<li class="blockList__item icoPos_lft icoSize_36 i-exclamarkBig">
+									<h3 class="blockList__itemTitle">Эвакуация из кювета и на бездорожье</h3>
+									<div class="blockList__itemContent">Мы перевозим автомобили весом до 4-х тонн
+										(легковые, внедорожники,
+										минивэны и т.п.), подбирая эвакуатор под тип транспортного средства,
+										а также учитывая характер повреждений, если таковые имеются.</div>
+								</li>
+								<li class="blockList__item icoPos_lft icoSize_36 i-exclamarkBig">
+									<h3 class="blockList__itemTitle">Транспортировка спецтехники</h3>
+									<div class="blockList__itemContent">Мы перевозим автомобили весом до 4-х тонн
+										(легковые, внедорожники,
+										минивэны и т.п.), подбирая эвакуатор под тип транспортного средства,
+										а также учитывая характер повреждений, если таковые имеются.</div>
+								</li>
+								<li class="blockList__item icoPos_lft icoSize_36 i-exclamarkBig">
+									<h3 class="blockList__itemTitle">Перевозка ретроавтомобилей и спорткаров</h3>
+									<div class="blockList__itemContent">Мы перевозим автомобили весом до 4-х тонн
+										(легковые, внедорожники,
+										минивэны и т.п.), подбирая эвакуатор под тип транспортного средства,
+										а также учитывая характер повреждений, если таковые имеются.</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<div class="block price">
+					<div class="contentWrapper">
+						<h2 class="block__title al_left">Стоимость эвакуации</h2>
+						<div class="block__content">
+							<p class="bigSize">В пределах г.Сергев Посад - от 2000 руб!</p>
+							<p>В зависимости от удаленности от города, стоимость рассчитывается следующим образом:</p>
+							<div class="overflow-table">
+								<table class="priceTbl">
+									<tbody>
+										<tr>
+											<td class="title">Удаленность (км)</td>
+
+											<td>20-30</td>
+
+											<td>31-40</td>
+
+											<td>41-50</td>
+
+											<td>51-60</td>
+
+											<td>60-65</td>
+
+											<td>65-75</td>
+
+											<td>75-85</td>
+
+											<td>85-95</td>
+
+											<td>95-105</td>
+
+											<td>105-115</td>
+
+											<td>115-125</td>
+
+											<td>125-150</td>
+
+											<td>более 150</td>
+
+										</tr>
+										<tr>
+											<td class="title">Стоимость (руб)</td>
+
+											<td>3000</td>
+
+											<td>4000</td>
+
+											<td>4500</td>
+
+											<td>5000</td>
+
+											<td>5500</td>
+
+											<td>6000</td>
+
+											<td>6500</td>
+
+											<td>7000</td>
+
+											<td>7500</td>
+
+											<td>8000</td>
+
+											<td>8500</td>
+
+											<td>9000</td>
+
+											<td>от 60 р. за 1 км</td>
+
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
-</div><!--.pageWrapper-->
+	<!--.pageWrapper-->
 
 
 
 
 
-<!-- *********************** Низ *********************** -->
+	<!-- *********************** Низ *********************** -->
 
-<footer class="pageFooter" role="contentinfo">
-	<div class="contentWrapper">
-		<div class="footerBtm"><!--
-			--><div class="footerBtm__left"></div><!--
-			--><div class="footerBtm__right">Разработка и&nbsp;продвижение сайтов
-				<a class="devLogo" href="http://benovate.ru" target="blank">
-					<img src="img/benovate.png">
-				</a>
-			</div><!--
-		--></div>
-	</div><!--.contentWrapper-->
-</footer>
+	<footer class="pageFooter" role="contentinfo">
+		<div class="contentWrapper">
+			<div class="footerBtm">
+				<!--
+			-->
+				<div class="footerBtm__left"></div>
+				<!--
+			-->
+				<div class="footerBtm__right">Разработка и&nbsp;продвижение сайтов
+					<a class="devLogo" href="http://benovate.ru" target="blank">
+						<img src="img/benovate.png">
+					</a>
+				</div>
+				<!--
+		-->
+			</div>
+		</div>
+		<!--.contentWrapper-->
+	</footer>
 
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript">
+		(function (m, e, t, r, i, k, a) {
+			m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+			m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+		})
+			(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-   ym(65726716, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/65726716" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+		ym(65726716, "init", {
+			clickmap: true,
+			trackLinks: true,
+			accurateTrackBounce: true,
+			webvisor: true
+		});
+	</script>
+	<noscript>
+		<div><img src="https://mc.yandex.ru/watch/65726716" style="position:absolute; left:-9999px;" alt="" /></div>
+	</noscript>
+	<!-- /Yandex.Metrika counter -->
 
 </body>
+
 </html>
